crates/trace-facts/tests/ui/trace_fact_spec_missing_fact_attr.rs
use serde::Serialize;
use fe_trace_facts::{OriginExportKey, TraceFactSpec};

#[derive(Serialize, TraceFactSpec)]
struct MissingFactAttr {
    #[trace_key]
    key: OriginExportKey,
}

fn main() {}
